test/files/invalid/attribute_twice.fbs
struct Foo (force_align: 4, force_align: 1) {
  v: uint8;
}
